# hw_21_1

./: pyproject.toml
config/: settings.py  urls.py
mainapp/: admin.py  models.py  urls.py  views.py
mainapp/management/commands/: fun_action.py
mainapp/migrations/: 0001_initial.py
mainapp/templates/mainapp/: base.html  category_list.html  index.html  product_list.html
mainapp/templates/mainapp/includes/: inc_category.html  inc_product.html
mainapp/templatetags/: my_tags.py
